data/derived/sp14/progs/unify/prog0489.ml.out
Characters 66-69:
  sum(t, y);;
  ^^^
Error: This expression has type ('a -> 'b -> 'c) list * int -> 'd list
       but an expression was expected of type 'a
       The type variable 'a occurs inside
       ('a -> 'b -> 'c) list * int -> 'd list
